--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
     </center>
     <center class="skill" id="skill">
-      <h2 style="margin-top: 50px;">Skills</h2>
+      <h3 style="margin-top: 50px;">Skills</h3>
       <div class="n-skills skill-anim skill-show n-about-dark">
         <canvas height="0.5" width="0"></canvas>
         <table>
@@ -107,7 +107,7 @@
         <canvas height="0.4" width="0"></canvas>
       </div>
     </center>
-    <center><h2 style="margin-top: 50px;">Project</h2></center>
+    <center><h3 style="margin-top: 50px;">Project</h3></center>
       <center class="project" id="project">
         <div class="project-anim project-show">
           <table class="n-card">
@@ -174,7 +174,7 @@
           </table>
         </div>
       </center>
-      <center><h2 style="margin-top: 50px;">Hobby</h2></center>
+      <center><h3 style="margin-top: 50px;">Hobby</h3></center>
       <center class="hobby" id="hobby">
         <div class="hobby-anim hobby-show">
           <table class="n-card">
@@ -203,6 +203,10 @@
             </tr>
           </table>
         </div>
+      </center>
+      <center>
+        <h3>Pengunjung</h3>
+        <p id="total">Total : Load..</p>
       </center>
       <canvas height="1" width="0"></canvas>
     <center><h5>Copyright 2022 By Syeif Gamer1015</h5>
