--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
   </div>
   <!-- changemode -->
   <button onclick="change()" class="text-light" id="changemode"><i class="fa-solid fa-sun fa-xl"></i></button>
-  <button class="text-light btn btn-primary" style="opacity: 0;" onclick="window.location.replace(`#home`)" id="upup"><i class="fa-solid fa-arrow-up fa-xl"></i></button>
+  <center id="upupc" style="margin-right: 50px;">
+    <button class="text-light btn btn-primary" style="opacity: 0;" onclick="window.location.replace(`#home`)" id="upup"><i class="fa-solid fa-arrow-up fa-xl"></i></button>
+  </center>
   <!-- Perkenalan -->
   <center id="perkenalan" style="margin-top: -500px;">
     <img src="./assets/logo.jpeg" alt="Icon" data-tilt data-tilt-full-page-listening>
@@ -209,7 +211,7 @@
         <p id="total">Total : Load..</p>
       </center>
       <canvas height="1" width="0"></canvas>
-    <center><h5>Copyright 2022 By Syeif Gamer1015</h5>
+    <center id="copyright"><h5>Copyright 2022 By Syeif Gamer1015</h5>
     <p>Made In Indonesia ❤️</p></center>
   </div>
   <!-- javascript -->
